--- a/hobbies.html
+++ b/hobbies.html
@@ -45,10 +45,10 @@
         <div class="contentC">  
           <div class="row">
             <div class="column">
-              <img src="./images/pc/pc1.JPG" alt="pc1" style="transform:rotate(90deg);width:400px;" class="contentImg"> <br><br><br><br>
-              <img src="./images/pc/pc2.JPG" alt="pc2" style="width:400px;" class="contentImg">   <br><br> 
-              <img src="./images/pc/pc3.JPG" alt="pc3" style="width:400px;" class="contentImg">   <br><br> 
-              <img src="./images/pc/pc4.JPG" alt="pc4" style="width:400px;" class="contentImg">     <br>  <br> 
+              <img src="images/pc/pc1.JPG" alt="pc1" style="transform:rotate(90deg);width:400px;" class="contentImg"> <br><br><br><br>
+              <img src="images/pc/pc2.JPG" alt="pc2" style="width:400px;" class="contentImg">   <br><br> 
+              <img src="images/pc/pc3.JPG" alt="pc3" style="width:400px;" class="contentImg">   <br><br> 
+              <img src="images/pc/pc4.JPG" alt="pc4" style="width:400px;" class="contentImg">     <br>  <br> 
             </div>
             <div class="column">
               <p>This was my most recently built PC for my self. It used i7-8700k paired with Z370 motherboard along with the Noctua NH D15 for casual overclocking. Since the CPU’s temperature was on the higher side according to different reviews on Youtube, 
@@ -65,9 +65,9 @@
         </button>
         <div class="contentC">         
           <div class="column">
-            <img src="./images/airsoft/air1.PNG" alt="air1" style="width:400px;" class="contentImg"> <br><br><br><br>
-            <img src="./images/airsoft/air2.jpg" alt="air2" style="width:400px;" class="contentImg">   <br><br> 
-            <img src="./images/airsoft/air3.jpg" alt="air3" style="transform:rotate(270deg);width:400px;" class="contentImg">   <br><br> 
+            <img src="images/airsoft/air1.PNG" alt="air1" style="width:400px;" class="contentImg"> <br><br><br><br>
+            <img src="images/airsoft/air2.jpg" alt="air2" style="width:400px;" class="contentImg">   <br><br> 
+            <img src="images/airsoft/air3.jpg" alt="air3" style="transform:rotate(270deg);width:400px;" class="contentImg">   <br><br> 
           </div>
           <div class="column">
             <p>
