case sensitive fix

--- a/hobbies.html
+++ b/hobbies.html
@@ -66,8 +66,8 @@
         <div class="contentC">         
           <div class="column">
             <img src="images/airsoft/air1.PNG" alt="air1" style="width:400px;" class="contentImg"> <br><br><br><br>
-            <img src="images/airsoft/air2.jpg" alt="air2" style="width:400px;" class="contentImg">   <br><br> 
-            <img src="images/airsoft/air3.jpg" alt="air3" style="transform:rotate(270deg);width:400px;" class="contentImg">   <br><br> 
+            <img src="images/airsoft/air2.JPG" alt="air2" style="width:400px;" class="contentImg">   <br><br> 
+            <img src="images/airsoft/air3.JPG" alt="air3" style="transform:rotate(270deg);width:400px;" class="contentImg">   <br><br> 
           </div>
           <div class="column">
             <p>
