--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div id="container" class="clear">
     <!-- Slider -->
     <section id="slider" class="clear">
-      <figure><img src="images/main.JPG" alt="main img">
+      <figure><img src="images/main.jpg" alt="main img">
         <figcaption>
           <h2>About Me</h2>
           <p>I recently graduated from Seneca's Computer Programmer program with two Co-op terms as 
